--- a/space1.css
+++ b/space1.css
@@ -1,35 +1,40 @@
-* {margin: 0; padding: 0;}
+* {
+	margin: 0; 
+	padding: 0;
+	 
+	 }
+
 body {
-	background-image: url("bg.png");
-	font-family: Tahoma;
-}
+		background-image: url("bg.png");
+		font-family: Tahoma;
+		}
 
-.frame{
-	background-color: rgba(0,128,0,0.4);
-	
-	/* put css-rules in this ccs-block here below */
-	
-}
-
-h1{
-	background-color: rgba(0,32,0,0.4);
-	line-height: 40px;
-	
-	/* put css-rules in this ccs-block here below */
-	
-}
-
-h2 {
-	line-height: 30px;
-	
-	/* put css-rules in this ccs-block here below */
-	
-}
 
 p{
-	background-color: rgba(256,256,0,0.4);
-	line-height: 20px;
-	
-	/* put css-rules in this ccs-block here below */
+		background-color: rgba(256,256,0,0.4);
+		line-height: 20px;
+	    margin-bottom: 11px;
+	    padding: 12px 10px 7px 10px;
+	}
 
+h1{
+		background-color: rgba(0,32,0,0.4);
+		line-height: 40px;
+	    padding: 20px;
+	    margin-bottom: 30px;
+	}
+h2{
+		line-height: 30px;
+	  	border: 4px solid purple;
+	  	padding: 4px 0px 8px 21px;
+	  	margin-bottom: 10px;
+}
+
+
+.frame{
+		background-color: rgba(0,128,0,0.4);
+		padding: 20px 11px;
+		width: 599px;
+		margin-left: 389px;
+		margin-bottom: 40px;
 }
