--- a/space2.css
+++ b/space2.css
@@ -17,7 +17,7 @@ h2{
 
 h3{
 		line-height: 32px;
-        font-size: 18.5px;
+        font-size: 18.0px;
 	}
 
 p{
@@ -52,7 +52,17 @@ header nav ul {
 
 #content {
 			display: flex;
+			height: 428px;
+
 		}
+
+
+
+#content h1{ 
+		
+		text-align: left;
+
+		 }
 
 nav li {
 			line-height: 24px;
